Add dummy meal cards to meal plans
